--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,9 @@
 
-Sankalp
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default-zone: http://localhost:8761/eureka
