--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 spring:
    application:
-       name: Config-default
+       name: Config-defaultttttttttt
 eureka:
   instance:
     prefer-ip-address: true
